fix logo on firefox

--- a/src/assets/css/tolkits.css
+++ b/src/assets/css/tolkits.css
@@ -15258,7 +15258,7 @@ img.zoom-img {
     }
 
     .app-navbar .e img {
-        max-width: 106px !important;
+        max-width: 180px !important;
     }
 
     .thedate {
